# linuxcnc-Headless-UI

./: .gitignore  =0.20.0  AGENTS.md  INSTALL.md  PRD.md  README.md  headless_ui.md  pyproject.toml  ui_enhancements.md
fleet_client/: __init__.py  auth.py  client.py
fleet_ui/: __init__.py  server.py
gateway/: __init__.py  auth.py  cli.py  metrics.py  policies.py  registry.py  server.py
linuxcnc_fleet/: __init__.py  auth.py  cli.py  fleet_pb2.py  fleet_pb2_grpc.py  headless.py  logging_config.py  metrics.py  server.py
proto/: fleet.proto
scripts/: setup-single-machine.sh  single-machine.md  start-ui.sh  verify.py
tests/: conftest.py  single_machine.sh  test_auth.py  test_cli.py  test_concurrency.py  test_fleet_client.py  test_fleet_client_auth.py  test_fleet_service_rpc.py  test_fleet_ui.py  test_gateway.py  test_gateway_cli.py  test_gateway_metrics.py  test_integration.py  test_integration_e2e.py  test_integration_renewal.py  test_interceptor.py  test_logging_config.py  test_policies.py  test_registry.py  test_sidecar.py  test_sidecar_metrics.py  test_snapshot.py  test_state_mapping.py  test_token_issuance.py
tests/integration/: conftest.py  test_full_stack.py  test_hal_integration.py
