[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "linuxcnc-fleet"
version = "0.1.0"
description = "gRPC-based headless fleet management UI for LinuxCNC"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
sidecar = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]
gateway = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "PyJWT>=2.8.0",
    "aiohttp>=3.9.0",
]
client = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]
dev = [
    "grpcio-tools>=1.60.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
]

[project.scripts]
headless-server = "linuxcnc_fleet.cli:main"
fleet-gateway = "gateway.cli:main"

[tool.setuptools.packages.find]
include = ["linuxcnc_fleet*", "gateway*", "fleet_client*"]
