[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxcnc-fleet"
version = "0.1.0"
description = "gRPC-based headless fleet management UI for LinuxCNC"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "LinuxCNC Fleet Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Industrial Control",
]

dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
sidecar = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]
gateway = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "aiohttp>=3.9.0",
]
client = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]
dev = [
    "grpcio-tools>=1.60.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
headless-server = "linuxcnc_fleet.cli:main"
fleet-gateway = "gateway.cli:main"

[tool.setuptools.packages.find]
include = ["linuxcnc_fleet*", "gateway*", "fleet_client*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"linuxcnc_fleet" = ["*.py", "fleet_pb2.py", "fleet_pb2_grpc.py"]
gateway = ["*.py"]
fleet_client = ["*.py"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__/*", "*.egg-info/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
