[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxcnc-fleet"
version = "0.1.0"
description = "gRPC-based headless fleet management UI for LinuxCNC"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "LinuxCNC Fleet Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Industrial Control",
]

dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
sidecar = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "prometheus-client>=0.20.0",
]
gateway = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "aiohttp>=3.9.0",
    "prometheus-client>=0.20.0",
]
client = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]
ui = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
    "aiohttp>=3.9.0",
]
dev = [
    "grpcio-tools>=1.60.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aiohttp>=3.9.0",
    "prometheus-client>=0.20.0",
]

[project.scripts]
headless-server = "linuxcnc_fleet.cli:main"
fleet-gateway = "gateway.cli:main"
fleet-ui = "fleet_ui.server:main"

[tool.setuptools.packages.find]
include = ["linuxcnc_fleet*", "gateway*", "fleet_client*", "fleet_ui*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"linuxcnc_fleet" = ["*.py", "fleet_pb2.py", "fleet_pb2_grpc.py"]
gateway = ["*.py"]
fleet_client = ["*.py"]
fleet_ui = ["*.py"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__/*", "*.egg-info/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:xvfb"
filterwarnings = [
    # IT7: aiohttp NotAppKeyWarning — tests use string keys instead of web.AppKey instances.
    # Both production code (gateway/server.py) and test code use string keys for simplicity;
    # this is a convention warning only, no functional impact.
    "ignore::aiohttp.web_exceptions.NotAppKeyWarning",
    # IT8: gRPC aio interceptor coroutine cleanup race — known grpcio library behavior.
    # When async channels close, InterceptedUnaryUnaryCall objects may be GC'd with
    # incomplete _interceptors_task initialization. No user-space fix exists; suppression
    # documents that this has been investigated and accepted as a library limitation.
    "ignore:coroutine.*InterceptedUnaryUnaryCall.*:RuntimeWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
